--- a/payment.html
+++ b/payment.html
@@ -94,7 +94,7 @@ form .btn2{
     <!-- header section start-->
 <header class="hearder">
     <a href="#" class="logo"> <i class="fas
-         fa-shopping-basket"></i> Alimat </a>
+         fa-shopping-basket"></i>  LYMARH </a>
     
      
         <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
