more commit to limer site

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 <div class="content">
     <h3> Lymarh <span>deodurant</span> store for you </h3>
     <p> last long, affordable deodurant with gentle scent thet match your 
-        tast and burget.
+        tast and burget. <br>
+        click the shop now button to start buying
     </p>
     <a href="maletype.html" class="btn">shop now</a>
 </div>
